# c-proj-template

./: .gitignore  Makefile.am  README.md  configure.ac
include/: example.h
src/: example.c
test/: test_example.c  test_example.test
